<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_leftpanel"
        android:layout_width="16dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="#ff0000" />

    <View
        android:id="@+id/view_rightpanel"
        android:layout_width="16dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="#ff0000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/view_leftpanel"
        android:layout_toLeftOf="@id/view_rightpanel"
        android:layout_toRightOf="@id/view_leftpanel"
        android:layout_toStartOf="@id/view_rightpanel">

        <!-- Even though Material Design suggests top padding to be 8dp, I think 16dp looks better for this app -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <!--
                I applied "Icon with text" styles found in https://material.io/guidelines/components/lists.html
                android:paddingTop="8dp" complies with "Padding above list: 8dp"
                android:paddingLeft="16dp" complies with Icon left padding: 16dp and contributes to the Text left padding: 72dp
                android:paddingRight="16dp" complies with Text right padding: 16dp
                android:layout_height="72dp" complies with Height: 72dp
            -->
            <!-- Restaurants category -->
            <LinearLayout
                android:id="@+id/list_restaurants"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <!-- The icon is 48dp which contributes to the Text left padding: 72dp -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_restaurant_48dp" />

                <!-- android:paddingLeft="8dp" complies with Text left padding: 72dp. I chose 8dp because the parent LinearLayout is left padded with 16dp and the image size is 48dp. The text is left padded with the remaining 8dp which completes with 72dp -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">
                    <!-- android:textSize="16sp", android:fontFamily="sans-serif", and android:textStyle="normal" comply with Primary text font: Roboto Regular 16sp -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_restaurants_primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                    <!-- android:textSize="16sp", android:fontFamily="sans-serif", and android:textStyle="normal" comply with Secondary text font: Roboto Regular 14sp -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_restaurants_secondary"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <!-- Entertainments category -->
            <LinearLayout
                android:id="@+id/list_entertainments"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_entertainment_48dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_entertainments_primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_entertainments_secondary"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <!-- Events category -->
            <LinearLayout
                android:id="@+id/list_events"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_events_48dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_events_primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_events_secondary"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <!-- Museums category -->
            <LinearLayout
                android:id="@+id/list_museums"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_museums_48dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_museums_primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_museums_secondary"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <!-- Translation category -->
            <LinearLayout
                android:id="@+id/list_translation"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_translation_48dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_translation_primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/category_translation_secondary"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:src="@drawable/img_canada_leaf" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>